syntax = "proto3";

package skysign_proto;

import "google/api/annotations.proto";
import "common.proto";

option java_package = "proto.skysign";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

service ManageVehicleService {
    rpc ListVehicles (Empty) returns (ListVehiclesResponses) {
        option (google.api.http) = {
            get: "/api/v1/vehicles"
        };
    };

    rpc GetVehicle (GetVehicleRequest) returns (Vehicle) {
        option (google.api.http) = {
            get: "/api/v1/vehicles/{id}"
        };
    };

    rpc CreateVehicle (Vehicle) returns (Vehicle) {
        option (google.api.http) = {
            post: "/api/v1/vehicles"
            body: "*"
        };
    };

    rpc UpdateVehicle (Vehicle) returns (Vehicle) {
        option (google.api.http) = {
            put: "/api/v1/vehicles/{id}"
            body: "*"
        };
    };

    rpc DeleteVehicle (DeleteVehicleRequest) returns (Empty) {
        option (google.api.http) = {
            delete: "/api/v1/vehicles/{id}"
        };
    };
}

message GetVehicleRequest {
    string id = 1;
}

message DeleteVehicleRequest {
    string id = 1;
}

message ListVehiclesResponses {
    repeated Vehicle vehicles = 1;
}